# opensips-cli

./: .gitignore  .opensipsctl_history  MANIFEST.in  README.md  SECURITY.md  cli.py  comm.py  config.py  config_defaults.py  config_parser.py  log_framework.py  logger.py  logger_colors.py  main.py  module.py  pyproject.toml  setup.py
.github/workflows/: docker-push-image.yml  docker-readme.yml  pypi.yml
Modules/: __init__.py  core.py  database.py  instance.py  mi.py  module.py
communication/: __init__.py  fifo.py  jsonrpc_helper.py  opensipsctl_json.py
debian/: .gitignore  changelog  control  files
docker/: Dockerfile  Dockerfile.alpine  Makefile  docker.md  run.sh
docs/: INSTALLATION.md  default_conf.ini  test_conf.ini
docs/Modules/: database.md  instance.md  mi.md  user.md
docs/modules/: database.md  diagnose.md  mi.md  tls.md  trace.md  trap.md  user.md
etc/: default.cfg
opensipscli/: __init__.py  args.py  cli.py  comm.py  config.py  config_defaults.py  db.py  defaults.py  logger.py  main.py  module.py  version.py
opensipscli/communication/: __init__.py  datagram.py  fifo.py  http.py  jsonrpc_helper.py
opensipscli/libs/: __init__.py  sqlalchemy_utils.py
opensipscli/modules/: __init__.py  database.py  diagnose.py  instance.py  mi.py  tls.py  trace.py  trap.py  user.py
packaging/arch/: PKGBUILD  PKGBUILD.git  opensips-cli.install
packaging/debian/: changelog  control  copyright  rules  watch
packaging/redhat_fedora/: opensips-cli.spec
test/: alltests.py  test-database.sh  test.sh
tmp/: db_script  opensips_fifo  opensips_json
