[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "opensipscli"
dynamic = ["version"]
description = "OpenSIPS Command Line Interface"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GNU General Public License v3 (GPLv3)" }
authors = [
    { name = "OpenSIPS Project", email = "project@opensips.org" },
]
maintainers = [
    { name = "Razvan Crainea", email = "razvan@opensips.org" },
]
dependencies = [
    "opensips",
    "mysqlclient<1.4.0rc1",
    "sqlalchemy>=1.3.3,<2",
    "sqlalchemy-utils",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/OpenSIPS/opensips-cli"
Source = "https://github.com/OpenSIPS/opensips-cli"
Issues = "https://github.com/OpenSIPS/opensips-cli/issues"
Download = "https://github.com/OpenSIPS/opensips-cli/archive/master.zip"

[project.scripts]
opensips-cli = "opensipscli.main:main"

[tool.hatch.version]
path = "opensipscli/version.py"

[tool.hatch.build.targets.wheel]
packages = ["opensipscli"]
